k8s-services/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-server
  template:
    metadata:
      labels:
        app: front-server
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: front-server
          image: ghcr.io/nhnacademy-aiot3-yes-ai-do/front_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
