k8s-services/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-server
spec:
  selector:
    app: front-server
  ports:
    - port: 80
      targetPort: 8080
