k8s-services/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
spec:
  rules:
    - host: yes-nhn.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-server
                port:
                  number: 80
